--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -938,7 +938,7 @@ li{
     z-index: 999999999999999;
     background-position: center center;
     background-repeat: no-repeat;
-    background-image:url(../images/icon/preloader.svg);
+    background-image:url(../images/about/preloader.svg);
 }
 .preloader-close {
     position: fixed;
